# gomoku

./: CMakeLists.txt  makebuild
includes/: ArtificialPlayer.hpp  Game.hpp  GomokuReferee.hpp  GomokuUI.hpp  HumanPlayer.hpp  IArtificialInteligence.hpp  IPlayer.hpp  IReferee.hpp  Log.hpp  Map.hpp  MinMax.hpp  Player.hpp  RessourceManager.hpp  TextureManager.hpp
mSFML/: IGui.hpp
srcs/: ArtificialPlayer.cpp  Coordinates.cpp  DoubleThree.cpp  Game.cpp  GomokuReferee.cpp  GomokuUI.cpp  HumanPlayer.cpp  Main.cpp  Main_jo.cpp  Map.cpp  MinMax.cpp  Player.cpp
